Session storage fully functional, modularization mostly complete, cleanup needed

--- a/flask_app/templates/code_to_json.html
+++ b/flask_app/templates/code_to_json.html
@@ -93,7 +93,7 @@
                 <div class="flex_row space_between center">
                     <div class="flex_row gap30">
                         <h3 class="input_label" id="code_label"><label for="body_text">Code</label></h3>
-                        <button class="info_button" id="code_info_open_button" title="Click for info">&#128712;</button>
+                        <button class="info_button" id="body_info_open_button" title="Click for info">&#128712;</button>
                     </div>
                     <button class="button" id="paste_button">Paste</button>
                 </div>
@@ -159,11 +159,11 @@
                 <button class="button self-center" id="tab_stop_info_close_button">Got It</button>
             </div>
         </dialog>
-        <dialog class="modal light_text" id="code_info_modal">
+        <dialog class="modal light_text" id="body_info_modal">
             <div class="flex_col">
                 <h3 class="text_center">Code</h3>
                 <p>The code that you would like VS Code to generate when this Snippet is triggered.</p>
-                <button class="button self-center" id="code_info_close_button">Got It</button>
+                <button class="button self-center" id="body_info_close_button">Got It</button>
             </div>
         </dialog>
         <dialog class="modal light_text" id="snippet_info_modal">
